ffi/poc/codec/crates/ak-abi/src/generated_corpus_nounk/abi.rs

impl ak_efix_TaskDetailed {
    pub const ZERO: Self = ak_efix_TaskDetailed {
        id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        session_id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        owner_pod_id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        status: 0,
        status_message: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        options: ak_efix_TaskOptions::ZERO,
        created_at: ak_efix_Timestamp::ZERO,
        submitted_at: ak_efix_Timestamp::ZERO,
        started_at: ak_efix_Timestamp::ZERO,
        ended_at: ak_efix_Timestamp::ZERO,
        pod_ttl: ak_efix_Timestamp::ZERO,
        output: ak_efix_TaskOutput::ZERO,
        pod_hostname: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        received_at: ak_efix_Timestamp::ZERO,
        acquired_at: ak_efix_Timestamp::ZERO,
        creation_to_end_duration: ak_efix_Duration::ZERO,
        processing_to_end_duration: ak_efix_Duration::ZERO,
        initial_task_id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        received_to_end_duration: ak_efix_Duration::ZERO,
        processed_at: ak_efix_Timestamp::ZERO,
        fetched_at: ak_efix_Timestamp::ZERO,
        payload_id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        created_by: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        presence: 0,
    };
}
pub const AK_EFIX_TASKDETAILED_PRESENT_OPTIONS: u32 = 1 << 0;
pub const AK_EFIX_TASKDETAILED_PRESENT_CREATED_AT: u32 = 1 << 1;
pub const AK_EFIX_TASKDETAILED_PRESENT_SUBMITTED_AT: u32 = 1 << 2;
pub const AK_EFIX_TASKDETAILED_PRESENT_STARTED_AT: u32 = 1 << 3;
pub const AK_EFIX_TASKDETAILED_PRESENT_ENDED_AT: u32 = 1 << 4;
pub const AK_EFIX_TASKDETAILED_PRESENT_POD_TTL: u32 = 1 << 5;
pub const AK_EFIX_TASKDETAILED_PRESENT_OUTPUT: u32 = 1 << 6;
pub const AK_EFIX_TASKDETAILED_PRESENT_RECEIVED_AT: u32 = 1 << 7;
pub const AK_EFIX_TASKDETAILED_PRESENT_ACQUIRED_AT: u32 = 1 << 8;
pub const AK_EFIX_TASKDETAILED_PRESENT_CREATION_TO_END_DURATION: u32 = 1 << 9;
pub const AK_EFIX_TASKDETAILED_PRESENT_PROCESSING_TO_END_DURATION: u32 = 1 << 10;
pub const AK_EFIX_TASKDETAILED_PRESENT_RECEIVED_TO_END_DURATION: u32 = 1 << 11;
pub const AK_EFIX_TASKDETAILED_PRESENT_PROCESSED_AT: u32 = 1 << 12;
pub const AK_EFIX_TASKDETAILED_PRESENT_FETCHED_AT: u32 = 1 << 13;

/// Decode group for `TaskDetailed`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_TaskDetailed {
    pub id: ak_span,
    pub session_id: ak_span,
    pub owner_pod_id: ak_span,
    pub status: i32,
    pub status_message: ak_span,
    pub options: ak_dfix_TaskOptions,
    pub created_at: ak_dfix_Timestamp,
    pub submitted_at: ak_dfix_Timestamp,
    pub started_at: ak_dfix_Timestamp,
    pub ended_at: ak_dfix_Timestamp,
    pub pod_ttl: ak_dfix_Timestamp,
    pub output: ak_dfix_TaskOutput,
    pub pod_hostname: ak_span,
    pub received_at: ak_dfix_Timestamp,
    pub acquired_at: ak_dfix_Timestamp,
    pub creation_to_end_duration: ak_dfix_Duration,
    pub processing_to_end_duration: ak_dfix_Duration,
    pub initial_task_id: ak_span,
    pub received_to_end_duration: ak_dfix_Duration,
    pub processed_at: ak_dfix_Timestamp,
    pub fetched_at: ak_dfix_Timestamp,
    pub payload_id: ak_span,
    pub created_by: ak_span,
    pub presence: u32,
}
impl ak_dfix_TaskDetailed {
    pub const ZERO: Self = ak_dfix_TaskDetailed {
        id: ak_span { off: 0, len: 0, coder: 0 },
        session_id: ak_span { off: 0, len: 0, coder: 0 },
        owner_pod_id: ak_span { off: 0, len: 0, coder: 0 },
        status: 0,
        status_message: ak_span { off: 0, len: 0, coder: 0 },
        options: ak_dfix_TaskOptions::ZERO,
        created_at: ak_dfix_Timestamp::ZERO,
        submitted_at: ak_dfix_Timestamp::ZERO,
        started_at: ak_dfix_Timestamp::ZERO,
        ended_at: ak_dfix_Timestamp::ZERO,
        pod_ttl: ak_dfix_Timestamp::ZERO,
        output: ak_dfix_TaskOutput::ZERO,
        pod_hostname: ak_span { off: 0, len: 0, coder: 0 },
        received_at: ak_dfix_Timestamp::ZERO,
        acquired_at: ak_dfix_Timestamp::ZERO,
        creation_to_end_duration: ak_dfix_Duration::ZERO,
        processing_to_end_duration: ak_dfix_Duration::ZERO,
        initial_task_id: ak_span { off: 0, len: 0, coder: 0 },
        received_to_end_duration: ak_dfix_Duration::ZERO,
        processed_at: ak_dfix_Timestamp::ZERO,
        fetched_at: ak_dfix_Timestamp::ZERO,
        payload_id: ak_span { off: 0, len: 0, coder: 0 },
        created_by: ak_span { off: 0, len: 0, coder: 0 },
        presence: 0,
    };
}
pub const AK_DFIX_TASKDETAILED_PRESENT_OPTIONS: u32 = 1 << 0;
pub const AK_DFIX_TASKDETAILED_PRESENT_CREATED_AT: u32 = 1 << 1;
pub const AK_DFIX_TASKDETAILED_PRESENT_SUBMITTED_AT: u32 = 1 << 2;
pub const AK_DFIX_TASKDETAILED_PRESENT_STARTED_AT: u32 = 1 << 3;
pub const AK_DFIX_TASKDETAILED_PRESENT_ENDED_AT: u32 = 1 << 4;
pub const AK_DFIX_TASKDETAILED_PRESENT_POD_TTL: u32 = 1 << 5;
pub const AK_DFIX_TASKDETAILED_PRESENT_OUTPUT: u32 = 1 << 6;
pub const AK_DFIX_TASKDETAILED_PRESENT_RECEIVED_AT: u32 = 1 << 7;
pub const AK_DFIX_TASKDETAILED_PRESENT_ACQUIRED_AT: u32 = 1 << 8;
pub const AK_DFIX_TASKDETAILED_PRESENT_CREATION_TO_END_DURATION: u32 = 1 << 9;
pub const AK_DFIX_TASKDETAILED_PRESENT_PROCESSING_TO_END_DURATION: u32 = 1 << 10;
pub const AK_DFIX_TASKDETAILED_PRESENT_RECEIVED_TO_END_DURATION: u32 = 1 << 11;
pub const AK_DFIX_TASKDETAILED_PRESENT_PROCESSED_AT: u32 = 1 << 12;
pub const AK_DFIX_TASKDETAILED_PRESENT_FETCHED_AT: u32 = 1 << 13;

/// Encode group for `TaskSummary`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_TaskSummary {
    pub id: ak_str,
    pub session_id: ak_str,
    pub options: ak_efix_TaskOptions,
    pub status: i32,
    pub created_at: ak_efix_Timestamp,
    pub error: ak_str,
    pub status_message: ak_str,
    pub count_data_dependencies: i64,
    pub presence: u32,
}
impl ak_efix_TaskSummary {
    pub const ZERO: Self = ak_efix_TaskSummary {
        id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        session_id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        options: ak_efix_TaskOptions::ZERO,
        status: 0,
        created_at: ak_efix_Timestamp::ZERO,
        error: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        status_message: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        count_data_dependencies: 0,
        presence: 0,
    };
}
pub const AK_EFIX_TASKSUMMARY_PRESENT_OPTIONS: u32 = 1 << 0;
pub const AK_EFIX_TASKSUMMARY_PRESENT_CREATED_AT: u32 = 1 << 1;

/// Decode group for `TaskSummary`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_TaskSummary {
    pub id: ak_span,
    pub session_id: ak_span,
    pub options: ak_dfix_TaskOptions,
    pub status: i32,
    pub created_at: ak_dfix_Timestamp,
    pub error: ak_span,
    pub status_message: ak_span,
    pub count_data_dependencies: i64,
    pub presence: u32,
}
impl ak_dfix_TaskSummary {
    pub const ZERO: Self = ak_dfix_TaskSummary {
        id: ak_span { off: 0, len: 0, coder: 0 },
        session_id: ak_span { off: 0, len: 0, coder: 0 },
        options: ak_dfix_TaskOptions::ZERO,
        status: 0,
        created_at: ak_dfix_Timestamp::ZERO,
        error: ak_span { off: 0, len: 0, coder: 0 },
        status_message: ak_span { off: 0, len: 0, coder: 0 },
        count_data_dependencies: 0,
        presence: 0,
    };
}
pub const AK_DFIX_TASKSUMMARY_PRESENT_OPTIONS: u32 = 1 << 0;
pub const AK_DFIX_TASKSUMMARY_PRESENT_CREATED_AT: u32 = 1 << 1;

/// Encode group for `Probe`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_Probe {
    pub id: ak_str,
    pub opt_count: i32,
    pub opt_label: ak_str,
    pub opt_flag: u8,
    pub body_case: u32,
    pub body_as_int: i64,
    pub body_as_text: ak_str,
    pub body_as_blob: ak_str,
    pub body_as_stamp: ak_efix_Timestamp,
    pub body_as_nothing: ak_efix_Empty,
    pub presence: u32,
}
impl ak_efix_Probe {
    pub const ZERO: Self = ak_efix_Probe {
        id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        opt_count: 0,
        opt_label: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        opt_flag: 0,
        body_case: 0,
        body_as_int: 0,
        body_as_text: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        body_as_blob: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        body_as_stamp: ak_efix_Timestamp::ZERO,
        body_as_nothing: ak_efix_Empty::ZERO,
        presence: 0,
    };
}
pub const AK_EFIX_PROBE_PRESENT_OPT_COUNT: u32 = 1 << 0;
pub const AK_EFIX_PROBE_PRESENT_OPT_LABEL: u32 = 1 << 1;
pub const AK_EFIX_PROBE_PRESENT_OPT_FLAG: u32 = 1 << 2;

/// Decode group for `Probe`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_Probe {
    pub id: ak_span,
    pub opt_count: i32,
    pub opt_label: ak_span,
    pub opt_flag: u8,
    pub body_case: u32,
    pub body_as_int: i64,
    pub body_as_text: ak_span,
    pub body_as_blob: ak_span,
    pub body_as_stamp: ak_dfix_Timestamp,
    pub body_as_nothing: ak_dfix_Empty,
    pub presence: u32,
}
impl ak_dfix_Probe {
    pub const ZERO: Self = ak_dfix_Probe {
        id: ak_span { off: 0, len: 0, coder: 0 },
        opt_count: 0,
        opt_label: ak_span { off: 0, len: 0, coder: 0 },
        opt_flag: 0,
        body_case: 0,
        body_as_int: 0,
        body_as_text: ak_span { off: 0, len: 0, coder: 0 },
        body_as_blob: ak_span { off: 0, len: 0, coder: 0 },
        body_as_stamp: ak_dfix_Timestamp::ZERO,
        body_as_nothing: ak_dfix_Empty::ZERO,
        presence: 0,
    };
}
pub const AK_DFIX_PROBE_PRESENT_OPT_COUNT: u32 = 1 << 0;
pub const AK_DFIX_PROBE_PRESENT_OPT_LABEL: u32 = 1 << 1;
pub const AK_DFIX_PROBE_PRESENT_OPT_FLAG: u32 = 1 << 2;

/// Encode group for `Empty`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_Empty {
    pub presence: u32,
}
impl ak_efix_Empty {
    pub const ZERO: Self = ak_efix_Empty {
        presence: 0,
    };
}

/// Decode group for `Empty`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_Empty {
    pub presence: u32,
}
impl ak_dfix_Empty {
    pub const ZERO: Self = ak_dfix_Empty {
        presence: 0,
    };
}

/// Encode group for `UploadResultData`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_UploadResultData {
    pub session_id: ak_str,
    pub result_id: ak_str,
    pub data_chunk: ak_str,
    pub presence: u32,
}
impl ak_efix_UploadResultData {
    pub const ZERO: Self = ak_efix_UploadResultData {
        session_id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        result_id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        data_chunk: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        presence: 0,
    };
}

/// Decode group for `UploadResultData`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_UploadResultData {
    pub session_id: ak_span,
    pub result_id: ak_span,
    pub data_chunk: ak_span,
    pub presence: u32,
}
impl ak_dfix_UploadResultData {
    pub const ZERO: Self = ak_dfix_UploadResultData {
        session_id: ak_span { off: 0, len: 0, coder: 0 },
        result_id: ak_span { off: 0, len: 0, coder: 0 },
        data_chunk: ak_span { off: 0, len: 0, coder: 0 },
        presence: 0,
    };
}

/// Encode group for `MetricsBatch`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_MetricsBatch {
    pub id: ak_str,
    pub presence: u32,
}
impl ak_efix_MetricsBatch {
    pub const ZERO: Self = ak_efix_MetricsBatch {
        id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        presence: 0,
    };
}

/// Decode group for `MetricsBatch`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_MetricsBatch {
    pub id: ak_span,
    pub presence: u32,
}
impl ak_dfix_MetricsBatch {
    pub const ZERO: Self = ak_dfix_MetricsBatch {
        id: ak_span { off: 0, len: 0, coder: 0 },
        presence: 0,
    };
}
